--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
           <div class="col-6 col-md-4">
             <div class="card p-2 text-center">
               <div class="fw-bold">${prog.points}</div>
-              <div class="text-muted">Puntos</div>
+              <div class="text-muted">EduCoins acomulados</div>
             </div>
           </div>
           <div class="col-6 col-md-4">
@@ -885,7 +885,7 @@
       <div class="table-responsive">
         <table class="table table-striped align-middle">
           <thead>
-            <tr><th>#</th><th>Avatar</th><th>Nombre</th><th>Puntos</th><th>Ejercicios</th></tr>
+            <tr><th>#</th><th>Avatar</th><th>Nombre</th><th>EduCoins</th><th>Ejercicios</th></tr>
           </thead>
           <tbody>
             ${leaderboard
@@ -985,7 +985,7 @@
         <div class="table-responsive">
           <table class="table table-striped align-middle">
             <thead>
-              <tr><th>#</th><th>Avatar</th><th>Nombre</th><th>Puntos</th><th>Ejercicios</th></tr>
+              <tr><th>#</th><th>Avatar</th><th>Nombre</th><th>EduCoins</th><th>Ejercicios</th></tr>
             </thead>
             <tbody>
               ${leaderboard
