--- a/login.html
+++ b/login.html
@@ -1,51 +1,84 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Iniciar sesión - FinTech Edu</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <style>body{background:#f8fafc;}</style>
-</head>
-<body>
-  <div class="container d-flex flex-column justify-content-center align-items-center" style="min-height:100vh;">
-    <div class="card card-login shadow mx-auto" style="max-width:370px;">
-      <div class="card-body">
-        <div class="text-center mb-3">
-          <img src="logo.png" alt="Logo FinTech Edu" class="brand-logo mb-2" style="width:40px;height:40px;object-fit:contain;" onerror="this.style.display='none'">
-          <h2 class="h5 fw-bold">FinTech Edu</h2>
-        </div>
-        <form id="loginForm">
-          <div class="mb-2">
-            <label for="loginUser" class="form-label">Usuario o Correo</label>
-            <input type="text" class="form-control" id="loginUser" required autocomplete="username">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Iniciar sesión - FinTech Edu</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        background: #f8fafc;
+      }
+    </style>
+  </head>
+  <body>
+    <div
+      class="container d-flex flex-column justify-content-center align-items-center"
+      style="min-height: 100vh"
+    >
+      <div class="card card-login shadow mx-auto" style="max-width: 370px">
+        <div class="card-body">
+          <div class="text-center mb-3">
+            <img
+              src="logo.png"
+              alt="Logo FinTech Edu"
+              class="brand-logo mb-2"
+              style="width: 40px; height: 40px; object-fit: contain"
+              onerror="this.style.display='none'"
+            />
+            <h2 class="h5 fw-bold">FinTech Edu</h2>
           </div>
-          <div class="mb-2">
-            <label for="loginPass" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="loginPass" required autocomplete="current-password">
+          <form id="loginForm">
+            <div class="mb-2">
+              <label for="loginUser" class="form-label">Usuario o Correo</label>
+              <input
+                type="text"
+                class="form-control"
+                id="loginUser"
+                required
+                autocomplete="username"
+              />
+            </div>
+            <div class="mb-2">
+              <label for="loginPass" class="form-label">Contraseña</label>
+              <input
+                type="password"
+                class="form-control"
+                id="loginPass"
+                required
+                autocomplete="current-password"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="loginRole" class="form-label">Perfil</label>
+              <select class="form-select" id="loginRole" required>
+                <option value="Estudiante">Estudiante</option>
+                <option value="Docente">Docente</option>
+              </select>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">
+              Ingresar
+            </button>
+          </form>
+          <div class="mt-3 text-center">
+            <a href="registro.html">¿No tienes cuenta? Regístrate</a>
           </div>
-          <div class="mb-3">
-            <label for="loginRole" class="form-label">Perfil</label>
-            <select class="form-select" id="loginRole" required>
-              <option value="Estudiante">Estudiante</option>
-              <option value="Docente">Docente</option>
-            </select>
-          </div>
-          <button type="submit" class="btn btn-primary w-100">Ingresar</button>
-        </form>
-        <div class="mt-3 text-center">
-          <a href="registro.html">¿No tienes cuenta? Regístrate</a>
         </div>
       </div>
     </div>
-  </div>
-  <script>
-    document.getElementById('loginForm').onsubmit = function(e) {
-      e.preventDefault();
-      // Simula login y redirige al index
-      window.location.href = 'index.html';
-    };
-  </script>
-</body>
+    <script>
+      document.getElementById("loginForm").onsubmit = function (e) {
+        e.preventDefault();
+        // Simula login y redirige al index
+        window.location.href = "index.html";
+      };
+    </script>
+  </body>
 </html>
